--- a/header.tex
+++ b/header.tex
@@ -1,18 +1,7 @@
 %!TEX root = paper.tex
-% Template for PLoS
-% Version 1.0 January 2009
 %
-% To compile to pdf, run:
-% latex plos.template
-% bibtex plos.template
-% latex plos.template
-% latex plos.template
-% dvipdf plos.template
-
-% \documentclass[10pt]{article}
 \documentclass[aps,twocolumn]{revtex4-1}
-% \documentclass[aps,twocolumn]{article}
-% \usepackage{multicol}
+\pdfoutput=1
 
 % amsmath package, useful for mathematical formulas
 \usepackage{amsmath}
