fix reference alignment and footnoting

--- a/header.tex
+++ b/header.tex
@@ -33,11 +33,6 @@
 % Captions will be left justified
 % \usepackage[labelfont=bf,labelsep=period,justification=raggedright]{caption}
 
-% Remove brackets from numbering in List of References
-\makeatletter
-\renewcommand{\@biblabel}[1]{\quad#1.}
-\makeatother
-
 % Leave date blank
 \date{}
 
@@ -78,93 +73,6 @@ urlcolor=[rgb]{.09 .29 .54}}
 \usepackage{amsthm}
 \usepackage{bibunits}
 
-% hyperref with bibunits
-% http://tex.stackexchange.com/a/101495/6784
-% \makeatletter
-% \def\hyper@natlinkstart#1{%
-%   \Hy@backout{#1}%
-%   \hyper@linkstart{cite}{cite.\@bibunitname.#1}%
-% %                             ^^^^^^^^^^^^^^
-%   \def\hyper@nat@current{#1}%
-% }
-
-% \def\hyper@natlinkbreak#1#2{%
-%   \hyper@linkend#1\hyper@linkstart{cite}{cite.\@bibunitname.#2}%
-% %                                             ^^^^^^^^^^^^^^
-% }
-
-% \def\hyper@natanchorstart#1{%
-%   \hyper@anchorstart{cite.\@bibunitname.#1}%
-% %                         ^^^^^^^^^^^^^^
-% }
-
-% \def\bibcite#1#2{%
-%   \@newl@bel{b}{#1}{\hyper@@link[cite]{}{cite.\@bibunitname.#1}{#2}}%
-% %                                             ^^^^^^^^^^^^^^
-% }%
-
-% \def\@lbibitem[#1]#2{%
-%   \@skiphyperreftrue
-%   \H@item[\hyper@anchorstart{cite.\@bibunitname.#2}%
-% %                                 ^^^^^^^^^^^^^^
-%   \@BIBLABEL{#1}\hyper@anchorend\hfill]%
-%   \@skiphyperreffalse
-%   \if@filesw
-%     \begingroup
-%       \let\protect\noexpand
-%       \immediate\write\@auxout{%
-%         \string\bibcite{#2}{#1}%
-%       }%
-%     \endgroup
-%   \fi
-%   \ignorespaces
-% }%
-
-% \def\@bibitem#1{%
-%   \@skiphyperreftrue\H@item\@skiphyperreffalse
-%   \hyper@anchorstart{cite.\@bibunitname.#1}\relax\hyper@anchorend
-% %                         ^^^^^^^^^^^^^^
-%   \if@filesw
-%     \begingroup
-%       \let\protect\noexpand
-%       \immediate\write\@auxout{%
-%         \string\bibcite{#1}{\the\value{\@listctr}}%
-%       }%
-%     \endgroup
-%   \fi
-%   \ignorespaces
-% }%
-
-% \def\@citex[#1]#2{%
-%   \let\@citea\@empty
-%   \@cite{%
-%     \@for\@citeb:=#2\do{%
-%       \@citea
-%       \def\@citea{,\penalty\@m\ }%
-%       \edef\@citeb{\expandafter\@firstofone\@citeb}%
-%       \if@filesw
-%         \immediate\write\@auxout{\string\citation{\@citeb}}%
-%       \fi
-%       \@ifundefined{b@\@citeb}{%
-%         \mbox{\reset@font\bfseries ?}%
-%         \G@refundefinedtrue
-%         \@latex@warning{%
-%           Citation `\@citeb' on page \thepage \space undefined%
-%         }%
-%       }{%
-%         \hyper@natlinkstart{#2}%
-% %       ^^^^^^^^^^^^^^^^^^^^^^^^
-%             \hbox{\csname b@\@citeb\endcsname}%
-%         \hyper@natlinkend%
-% %       ^^^^^^^^^^^^^^^^^^
-%       }%
-%     }%
-%   }{#1}%
-% }%
-
-% \makeatother
-% end - hyperref with bibunits
-
 % define colors
 \definecolor{DeepRed}{rgb}{.82,.14,.16}
 \definecolor{DeepBlue}{rgb}{0,0.36,0.62}
@@ -174,6 +82,30 @@ urlcolor=[rgb]{.09 .29 .54}}
 % http://tex.stackexchange.com/a/11669/6784
 \setcounter{tocdepth}{4}
 \setcounter{secnumdepth}{0}
+
+% copy of thebibliography from natbib
+% to avoid indentation
+\makeatletter
+\def\@biblabel#1{}
+\renewenvironment{thebibliography}[1]{%
+ \bibfont\bibsection\parindent \z@\list
+   {\@biblabel{\arabic{NAT@ctr}}}{\@bibsetup{#1}%
+    \setcounter{NAT@ctr}{0}}%
+    \ifNAT@openbib
+      \renewcommand\newblock{\par}
+    \else
+      \renewcommand\newblock{\hskip .11em \@plus.33em \@minus.07em}%
+    \fi
+    \sloppy\clubpenalty4000\widowpenalty4000
+    \sfcode`\.=1000\relax
+    \let\citeN\cite \let\shortcite\cite
+    \let\citeasnoun\cite
+ }{\def\@noitemerr{%
+  \PackageWarning{natbib}
+     {Empty `thebibliography' environment}}%
+  \endlist\vskip-\lastskip}
+\makeatother
+
 
 %% ** EDIT HERE **
 %% PLEASE INCLUDE ALL MACROS BELOW
