--- a/tex/table2x2stab.tex
+++ b/tex/table2x2stab.tex
@@ -7,7 +7,7 @@
 \begin{center}
 \begin{tabular}{ c || c | c | c }
 \hline
-matrix & connectivity & \specialcell{probability of stability\\to perturbation} & \specialcell{probability\\of stability}\\
+matrix & connectivity & \specialcell{robustness} & \specialcell{probability\\of stability}\\
 \hline
   $\begin{pmatrix}
 a & b \\
