--- a/tex/tablenographs.tex
+++ b/tex/tablenographs.tex
@@ -5,7 +5,7 @@
 % \begin{center}
 % \begin{tabular}{ c | c || c | c | c | c | c }
 \hline
-matrix & \specialcell{orbit\\size} & connectivity & \specialcell{edit\\distance} & \specialcell{cycle\\number} & \specialcell{probability of stability\\to perturbation} & \specialcell{probability\\of stability}\\
+matrix & \specialcell{orbit\\size} & connectivity & \specialcell{edit\\distance} & \specialcell{cycle\\number} & \specialcell{robustness} & \specialcell{probability\\of stability}\\
 \hline
 $\begin{pmatrix}
 1 & 0 & 0\\
