--- a/paper.tex
+++ b/paper.tex
@@ -7,9 +7,9 @@
 \let\ref\autoref
 
 % Remove prefix of footnote
-\makeatletter
-\renewcommand{\thempfn}{}
-\makeatother
+% \makeatletter
+% \renewcommand{\thempfn}{\thefootnote}
+% \makeatother
 
 \pagenumbering{arabic}
 
